--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
     </div>
 
     <div class="section-3">
-      <p>This is an inspiring quote, or a testimonial from a customer.
-        Maybe it's just filling up space, or maybe people will actually read it.
-        Who knows? All I know is that it looks nice.
-      </p>
-      <div>-Thor, God of Thunder</div>
+      <div class="quote">
+        <p>This is an inspiring quote, or a testimonial from a customer.
+          Maybe it's just filling up space, or maybe people will actually read it.
+          Who knows? All I know is that it looks nice.
+        </p>
+        <div class="quote-by">-Thor, God of Thunder</div>
+      </div>
     </div>
 
-    <div class="section-3">
+    <div class="section-4">
       <div class="content">
         <div class="heading">Call to action! It's time!</div>
         <div>Sign up for our product by clicking that button right over there!</div>
